working with hbs

--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="../public/css/style.css" />
 </head>
 <body>
-    <h1>{{title}}</h1>
-    <img src="../public/images/PhotoGrid_1554703920364.jpg" alt="Pic">
-    <p>Created by {{name}}</p>
+    {{>header}}
+    <img src="../../public/images/PhotoGrid_1554703920364.jpg" alt="Pic">
+    
+    {{>footer}}
 </body>
 </html>
