--- a/web-server/templates/views/Error.hbs
+++ b/web-server/templates/views/Error.hbs
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../public/css/style.css">
-    <script src="../../public/js/app.js"></script>
 </head>
 <body>
     {{>header}}
-    
+    <p>{{message}}</p>
     {{>footer}}
 </body>
 </html>
