--- a/web-server/templates/views/Error.hbs
+++ b/web-server/templates/views/Error.hbs
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>$04</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/images/weather.png">
 </head>
 <body>
-    {{>header}}
-    <p>{{message}}</p>
+    <div class="main-content">
+        {{>header}}
+        <p>{{message}}</p>
+    </div>
     {{>footer}}
 </body>
 </html>
