--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../public/css/style.css" />
+    <title>About</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="icon" href="/images/weather.png">
 </head>
 <body>
-    {{>header}}
-    <img src="../../public/images/PhotoGrid_1554703920364.jpg" alt="Pic">
-    
+    <div class="main-content">
+        {{>header}}
+        <img class="portrait" src="/images/PhotoGrid_1554703920364.jpg" alt="Pic">
+    </div>    
     {{>footer}}
 </body>
 </html>
