--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../../public/css/style.css" />
+    <title>Help</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="icon" href="/images/weather.png">
 </head>
 <body>
-     {{>header}}
-    <h1>{{title}}</h1>
+    <div class="main-content">
+        {{>header}}
+        <p>{{title}}</p>
+    </div>
+     
     {{>footer}}
 </body>
 </html>
