--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../../public/css/style.css">
-    <script src="../../public/js/app.js"></script>
+    <title>Weather</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/app.js"></script>
+    <link rel="icon" href="/images/weather.png">
 </head>
 <body>
-    {{>header}}
+    <div class="main-content">
+        {{>header}}
+    </div>
     
     {{>footer}}
 </body>
