--- a/web-server/public/css/style.css
+++ b/web-server/public/css/style.css
@@ -39,3 +39,16 @@ header a {
 .main-content {
     flex: 1;
 }
+
+input {
+    border: 1px solid #cccccc;
+    padding: 8px;
+}
+
+button {
+    cursor: pointer;
+    border: 1px solid #888888;
+    color: white;
+    background: #888888;
+    padding: 8px;
+}
