--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -5,14 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/app.js"></script>
     <link rel="icon" href="/images/weather.png">
 </head>
 <body>
     <div class="main-content">
         {{>header}}
+
+        <form action="">
+            <input type="text" placeholder="loaction">
+            <button>Search</button>
+        </form>
+
+        <p id="message1"></p>
+        <p id="message2"></p>
     </div>
     
     {{>footer}}
+
+    <script src="/js/app.js"></script>
 </body>
+
 </html>
